# media-pipeline-cli

./: .gitignore  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
audio_transcribe/: __init__.py  cli.py  whisper_engine.py
common/: __init__.py  io.py  logging.py  schema.py
tests/: test_audio_transcribe.py  test_io.py  test_schema.py  test_yt_watchlist_service.py
yt_fetch/: __init__.py  cli.py  downloader.py
yt_watchlist/: __init__.py  cli.py  service.py
